force-app/main/default/objects/BookedTrade__c/BookedTrade__c.object-meta.xml
<CustomObject>
    <label>Booked Trade</label>
    <nameField>
        <displayFormat>TR{0000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booked Trades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>