force-app/main/default/objects/BookedTrade__c/fields/DateBooked__c.field-meta.xml
<CustomField>
    <fullName>DateBooked__c</fullName>
    <label>Date Booked</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>