force-app/main/default/objects/BookedTrade__c/listViews/Trade_reviewers_BookedTrade.listView-meta.xml
<ListView>
    <fullName>Trade_reviewers_BookedTrade</fullName>
    <columns>NAME</columns>
    <columns>SellCurrency__c</columns>
    <columns>SellAmount__c</columns>
    <columns>BuyCurrency__c</columns>
    <columns>BuyAmount__c</columns>
    <columns>Rate__c</columns>
    <columns>DateBooked__c</columns>
    <filterScope>Everything</filterScope>
    <label>Trade reviewers</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>